--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,7 @@ body {
 @media screen and (max-width: 767px) {
   .header {
     position: relative;
+    padding: 16px 15px;
   }
   .header__group {
     display: inherit;
@@ -111,27 +112,16 @@ body {
   }
 }
 
-.nav {
-  display: flex;
-  align-items: center;
-}
-@media screen and (min-width: 320px) and (max-width: 767px) {
-  .nav {
-    padding-top: 16px;
-    padding-bottom: 15px;
-    display: inherit;
-  }
+@media screen and (max-width: 767px) {
   .nav__list {
-    display: none;
-  }
-  .nav__item {
-    display: none;
-  }
-  .nav__link {
     display: none;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
+  .nav {
+    display: flex;
+    align-items: center;
+  }
   .nav__list {
     margin-left: 88px;
     display: flex;
@@ -172,6 +162,10 @@ body {
   }
 }
 @media screen and (min-width: 1200px) {
+  .nav {
+    display: flex;
+    align-items: center;
+  }
   .nav__list {
     margin-left: 93px;
     display: flex;
@@ -211,7 +205,6 @@ body {
     color: #2196f3;
   }
 }
-
 .logo {
   display: inline-block;
   font-family: "Raleway", sans-serif;
@@ -714,7 +707,7 @@ body {
 }
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .footer__container {
-    display: inline-block;
+    display: block;
     text-align: center;
   }
   .footer__item {
@@ -806,6 +799,7 @@ body {
   display: inline-block;
   font-style: normal;
   line-height: 1.5;
+  text-align: center;
   text-decoration: none;
   color: #ffffff;
 }
@@ -874,7 +868,8 @@ body {
     text-align: center;
   }
   .subscription__input {
-    min-width: 450px;
+    min-width: 290px;
+    max-width: 450px;
   }
   .subscription__btn {
     display: inline-flex;
