--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,10 +4,12 @@
   @media screen and (max-width: 767px) {
     & {
       position: relative;
+      padding: 16px 15px;
     }
 
     &__group {
       display: inherit;
+
     }
   }
   @media screen and (min-width: 768px) {
