--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,5 +1,5 @@
 @media screen and (max-width: 767px) {
-  .nav {
+  .nav__list {
     display: none;
   }
 }
@@ -49,7 +49,13 @@
       color: $accent-color;
     }
   }
-  @media screen and (min-width: 1200px) {
+}
+
+@media screen and (min-width: 1200px) {
+  .nav {
+    display: flex;
+    align-items: center;
+
     &__list {
       margin-left: 93px;
       display: flex;
