--- a/sass/components/_subscription.scss
+++ b/sass/components/_subscription.scss
@@ -1,29 +1,4 @@
 .subscription {
-  @media screen and (min-width: 320px) and (max-width: 1199px) {
-    & {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
-    }
-    &__form {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-    &__label--mobile {
-      text-align: center;
-    }
-    &__input {
-      width: 290px;
-    }
-    &__btn {
-      display: inline-flex;
-
-      min-width: 200px;
-    }
-  }
-
   &__btn {
     position: relative;
     padding: 10px 62px 10px 28px;
@@ -70,6 +45,32 @@
     line-height: calc(20 / 16);
 
     color: $address-color;
+  }
+  @media screen and (min-width: 320px) and (max-width: 1199px) {
+    & {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+    }
+    &__form {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+    &__label--mobile {
+      text-align: center;
+    }
+    &__input {
+      min-width: 290px;
+
+      max-width: 450px;
+    }
+    &__btn {
+      display: inline-flex;
+
+      min-width: 200px;
+    }
   }
 
   @media screen and (min-width: 1200px) {
